syntax = "proto3";

package openwhisk_action;

service OpenWhiskActionService {
  rpc InvokeAction(InvokeActionRequest) returns (InvokeActionResponse);
  rpc InvokeActionAsync(InvokeActionAsyncRequest) returns (InvokeActionAsyncResponse);
  rpc InvokeSequence(InvokeSequenceRequest) returns (InvokeSequenceResponse);
  rpc InvokeWebAction(InvokeWebActionRequest) returns (InvokeWebActionResponse);
  rpc FireTrigger(FireTriggerRequest) returns (FireTriggerResponse);
  rpc GetActivation(GetActivationRequest) returns (GetActivationResponse);
  rpc ListActions(ListActionsRequest) returns (ListActionsResponse);
}

message InvokeActionRequest {
  string namespace = 1;
  string action_name = 2;
  string payload = 3;  // JSON string
  bool blocking = 4;
  int32 timeout = 5;
}

message InvokeActionResponse {
  bool success = 1;
  string activation_id = 2;
  string result = 3;  // JSON string
  int64 duration = 4;
  int64 start_time = 5;
  int64 end_time = 6;
  string status = 7;
  string error = 8;
}

message InvokeActionAsyncRequest {
  string namespace = 1;
  string action_name = 2;
  string payload = 3;  // JSON string
}

message InvokeActionAsyncResponse {
  bool success = 1;
  string activation_id = 2;
  string error = 3;
}

message InvokeSequenceRequest {
  string namespace = 1;
  string sequence_name = 2;
  string payload = 3;  // JSON string
}

message InvokeSequenceResponse {
  bool success = 1;
  string activation_id = 2;
  string result = 3;  // JSON string
  string error = 4;
}

message InvokeWebActionRequest {
  string namespace = 1;
  string package_name = 2;
  string action_name = 3;
  string payload = 4;  // JSON string
  string method = 5;
  map<string, string> headers = 6;
}

message InvokeWebActionResponse {
  bool success = 1;
  int32 status_code = 2;
  string response = 3;  // JSON string
  map<string, string> response_headers = 4;
  string error = 5;
}

message FireTriggerRequest {
  string namespace = 1;
  string trigger_name = 2;
  string payload = 3;  // JSON string
}

message FireTriggerResponse {
  bool success = 1;
  string activation_id = 2;
  string error = 3;
}

message GetActivationRequest {
  string namespace = 1;
  string activation_id = 2;
}

message GetActivationResponse {
  bool success = 1;
  string activation_id = 2;
  string result = 3;  // JSON string
  int64 duration = 4;
  string status = 5;
  repeated string logs = 6;
  string error = 7;
}

message ListActionsRequest {
  string namespace = 1;
  int32 limit = 2;
  int32 skip = 3;
}

message ListActionsResponse {
  bool success = 1;
  repeated ActionInfo actions = 2;
  string error = 3;
}

message ActionInfo {
  string name = 1;
  string namespace = 2;
  string version = 3;
  bool published = 4;
}
